Jump over obstacles fix

--- a/css/games copy 8.css
+++ b/css/games copy 8.css
@@ -2,7 +2,7 @@ html{
     background-color: black;
 }
 
-#jump{
+#joel{
     color: white;
 }
 
